# shell_gpt

./: .gitignore  pyproject.toml
sgpt/: app.py  config.py  function.py  printer.py  role.py
sgpt/handlers/: gemini_handler.py  handler.py
tests/: test_gemini_handler.py
